--- a/src/evaluation.ipynb
+++ b/src/evaluation.ipynb
@@ -2,92 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import csv\n",
     "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from metrics import *\n",
-    "\n",
-    "\n",
-    "def evaluate(predict_path, answer_path, sort_by_col=None, average=False, is_target_with_header=False, is_ranked_list_with_header=False, ranked_list_cols=None, debug=False):\n",
-    "    \"\"\"\n",
-    "    Parameters:\n",
-    "    ----------\n",
-    "    predict_path: path for predictions in csv format\n",
-    "    answer_path:  path for answer in csv format\n",
-    "    Format:\n",
-    "        prediction: n*(2+k) 2d-array\n",
-    "            n: number of test instances\n",
-    "            k: number of items recommended\n",
-    "            user_id, event_time, rec_1, rec_2, ... , rec_k\n",
-    "        answer: n*k 2d-array\n",
-    "            n: number of test instances\n",
-    "            k: columns = [user_id, ans_id,..., event_time]\n",
-    "    Return:\n",
-    "    ----------\n",
-    "    Dictionary: \n",
-    "        type(key): str,\n",
-    "        type(value): float/[float]\n",
-    "        if average == True:\n",
-    "            {'hr':score,'mrr':score,'ndcg':score}\n",
-    "        else #average == False:\n",
-    "            {'hr':[score...],'mrr':[score...],'ndcg':[score...]}\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    df_pre = pd.read_csv(predict_path, header=None)\n",
-    "    df_ans = pd.read_csv(answer_path, header=None)\n",
-    "    if debug:\n",
-    "        print(\"answer info:\",df_ans.shape,'\\n')\n",
-    "        print(df_ans.head(3))\n",
-    "        print(\"\\n------\\n\")\n",
-    "        print(\"prediction info:\",df_pre.shape,'\\n')\n",
-    "        print(df_pre.head(3))\n",
-    "\n",
-    "    # drop [user_id, event_time]\n",
-    "    if is_target_with_header:\n",
-    "        targets = df_ans.loc[1:,:] # drop header\n",
-    "    else:\n",
-    "        targets = df_ans.loc[:,:] # retain header\n",
-    "    \n",
-    "    if is_ranked_list_with_header:\n",
-    "        ranked_lists = df_pre.loc[1,:] # drop header\n",
-    "    else:\n",
-    "        ranked_lists = df_pre.loc[:,:] # drop header\n",
-    "\n",
-    "    if sort_by_col == None:\n",
-    "        targets = targets.loc[:,1]\n",
-    "    else:\n",
-    "        targets.sort_values(by=sort_by_col,inplace=True)\n",
-    "        ranked_lists.sort_values(by=sort_by_col,inplace=True)\n",
-    "        if debug:\n",
-    "            print(\"\\n====================================================\\n\")\n",
-    "            print(\"check sorting result\")\n",
-    "            print(\"target (first, last):\",targets.head(1)[sort_by_col].values[0],targets.tail(1)[sort_by_col].values[0])\n",
-    "            print(\"predict (first, last):\",ranked_lists.head(1)[sort_by_col].values[0],ranked_lists.tail(1)[sort_by_col].values[0])\n",
-    "        targets = targets.loc[:,1]\n",
-    "        \n",
-    "    if ranked_list_cols:\n",
-    "        ranked_lists = ranked_lists.loc[:,ranked_list_cols]  # choose columns of ranked items\n",
-    "\n",
-    "    targets = targets.values.astype(int) # convert dataFrame to list\n",
-    "    ranked_lists = ranked_lists.values.astype(int)\n",
-    "    if debug:\n",
-    "        print(\"\\n====================================================\\n\")\n",
-    "        print(\"targets info:\",targets.shape,targets.dtype,'\\n')\n",
-    "        print(targets[:3])\n",
-    "        print(\"\\n------\\n\")\n",
-    "        print(\"\\nranked_lists info:\",ranked_lists.shape,ranked_lists.dtype,'\\n')\n",
-    "        print(ranked_lists[:3])\n",
-    "\n",
-    "    # get scores of list/average\n",
-    "    hr = get_hit_ratio(ranked_lists,targets,average)\n",
-    "    mrr = get_MRR(ranked_lists,targets,average)\n",
-    "    ndcg = get_NDCG(ranked_lists,targets,average)\n",
-    "    return {'hr':hr,'mrr':mrr,'ndcg':ndcg}"
+    "from evaluation import evaluate"
    ]
   },
   {
@@ -106,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +54,7 @@
        " 'ndcg': 0.04513953600687949}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
